# spReticle

./: CMakeLists.txt  GPURenderer.h  README.md  V2Renderer.cpp  V2Renderer.h  defines.h  spReticleLoc.cpp  spReticleLoc.h  util.h
.github/workflows/: cmake.yml
docs/: WINDOWS_BUILD.md
